# kartoffel

./: .gitignore  Cargo.toml  README.md
src/: compass.rs  dir.rs  main.rs  motor.rs  radar.rs  sysk.rs  utils.rs
src/prog/: arena.rs  heist.rs  maze.rs  mod.rs  spammer.rs  wonder.rs
src/prog/flags/: mod.rs  navigation.rs
